<resources>
    <string name="app_name">OTOCON</string>
    <string name="email">メールアドレス</string>
    <string name="passworld">Passworld</string>
    <string name="username">Username</string>
    <string name="male">男性</string>
    <string name="female">女性</string>
    <string name="privacy">privacy</string>
    <string name="gender">Gender</string>
    <string name="empty">メールアドレスを入力してください。<br>パスワードを入力してください。</br>></string>
    <string name="email_empty">メールアドレスを入力してください。</string>
    <string name="content_empty">Content not blank</string>
    <string name="passworld_emty">パスワードを入力してください。</string>
    <string name="name_emty">Name can not be blank</string>
    <string name="email_emty">Email can not be blank</string>
    <string name="email_isValid">メールアドレスには正しい形式で入力してください。</string>
    <string name="gender_emty">  性別を選択してください。</string>
    <string name="phone_is_Vaild">携帯番号9~11文字で入力してください。</string>
    <string name="address_is_Vaild">Adrress can not be blank</string>
    <string name="title_toolbar_home">Home</string>
    <string name="title_toolbar_splash">Splash</string>
    <string name="title_toolbar_login">Login</string>
    <string name="title_toolbar_register">Register</string>
    <string name="title_toolbar_forgot_passworld">Forgot passworld</string>
    <string name="title_search">Search</string>
    <string name="send">Send</string>
    <string name="repeat_passworld">Repeat passworld</string>
    <string name="token">Token</string>
    <string name="login_facebook_error">Login Facebook error</string>
    <string name="login_normal_error">Login fail</string>
    <string name="register_normal_error">Register fail</string>
    <string name="register_facebook_error">Register Facebook fail</string>
    <string name="login_facebook">Login With Facebook</string>
    <string name="ok">OK</string>
    <string name="coupon_title_fomat">%s%d円OFF</string>
    <string name="tab1">ホーム</string>
    <string name="tab2">特別企画</string>
    <string name="tab3">近くのパーティー</string>
    <string name="tab4">Re Match</string>
    <string name="tab5">メニュー</string>
    <string name="title_after_party">After party</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_home">Home</string>
    <string name="title_more">More</string>
    <string name="party_detail">Party Detail</string>
    <string name="default_notification_channel_id">100</string>
    <string name="message_press_back_to_exit">終了する場合は、もう一度バックボタンを押してください</string>
    <string name="venue_information">会場紹介</string>
    <string name="benefits_and_deals">特典・お得情報</string>
    <string name="faq">FAQ</string>
    <string name="contact_us">お問い合わせ</string>
    <string name="news">お知らせ</string>
    <string name="new_arrivals">新着パーティー</string>
    <string name="text_notification_fogot">パスワードをお忘れの方は、下記にご登録のメールアドレスを記入してください。\nメールアドレス宛てに、パスワード再送メールをお送りいたします。</string>
    <string name="input_email">メールアドレスを入力してください。</string>
    <string name="confirm_forgot">トップ画面へ</string>
    <string name="forgot_password">送信</string>
    <string name="forgot_password_completed">ログイン画面へ</string>
    <string name="text_notification_reset_pass">ご入力いただいたメールアドレス宛てに、パスワード再送メールをお送りしました。\nメールの内容をチェックし、パスワードをご確認ください。</string>
    <string name="title_reset_password">会員ログインパスワード再送完了</string>
    <string name="title_faq">FAQ</string>
    <string name="faq_menu1">お申込み前に多い質問</string>
    <string name="faq_menu2">パーティー当日までに多い質問</string>
    <string name="faq_menu3">その他の質問</string>
    <string name="contact_us_left_field_title_at_row_1">姓（本名）</string>
    <string name="contact_us_right_field_title_at_row_1">名（本名）</string>
    <string name="contact_us_left_field_title_at_row_2">セイ</string>
    <string name="contact_us_right_field_title_at_row_2">メイ</string>
    <string name="contact_us_left_field_title_at_row_3">性別</string>
    <string name="contact_us_right_field_title_at_row_3">生年月日</string>
    <string name="contact_us_field_title_at_row_4">TEL</string>
    <string name="contact_us_field_title_at_row_5">都道府県</string>
    <string name="contact_us_field_title_at_row_6">メールアドレス</string>
    <string name="contact_us_field_title_at_row_7">問合せ内容</string>
    <string name="contact_us_field_title_at_row_8"><u>利用規約はこちら</u></string>
    <string name="contact_us_field_title_at_row_9">同意する</string>
    <string name="contact_us_field_title_at_row_10">確認する</string>
    <string name="contact_us_dash">-</string>
    <string name="contact_us_prefecture_emty">Address can not be blank!</string>
    <string name="contact_us_check_box_no_check">You must agree terms to continue!</string>
    <string name="contact_us_term_title">利用規約はこちら</string>
    <string name="contact_us_title">お問い合わせ</string>
    <string name="contact_us_noti">いつもOTOCONをご利用いただきありがとうございます。\nOTOCONではお客様が安心してご利用いただけるよう、しっかりサポート致します。\n「よくあるご質問」にないお問い合わせにつきましても、どうぞお気軽にお問い合わせください。</string>
    <string name="contact_sei">姓(本名)</string>
    <string name="contact_mei">名(本名)</string>
    <string name="contact_kana_sei">セイ</string>
    <string name="contact_kana_mei">メイ</string>
    <string name="contact_gender">性別</string>
    <string name="contact_year">年</string>
    <string name="contact_month">月</string>
    <string name="contact_day">日</string>
    <string name="contact_tel">携帯電話番号</string>
    <string name="contact_address">都道府県</string>
    <string name="contact_email">メールアドレス</string>
    <string name="contact_content">お問い合わせ内容</string>
    <string name="contact_us_term"><u>利用規約はこちら</u></string>
    <string name="contact_check">上記おとコン利用規約に同意します。</string>
    <string name="contact_button_text">同意の上、送信する</string>
    <string name="contact_step_1"><u>STEP 1</u>\n 入力</string>
    <string name="contact_step_2"><u>STEP 2</u>\n 確認</string>
    <string name="contact_step_3"><u>STEP 3</u>\n 完了</string>
    <string name="contact_us_confirm_content">お問合せありがとうございます。\n
        まもなくご確認のメールが届きます。\n
        万一、届かない場合はparty@p-a.jpを受信\n
        可能な設定にして頂けますようお願い申し上げます。</string>
    <string name="contact_us_confirm_button_text">トップへ戻る</string>
    <string name="contact_us_confirm_title">お問い合わせ</string>
    <string name="contact_us_name">お名前</string>
    <string name="contact_us_kana_name">フリガナ</string>
    <string name="contact_us_gender">性別</string>
    <string name="contact_us_birthday">生年月日</string>
    <string name="contact_us_address">都道府県</string>
    <string name="contact_us_tel">携帯電話番号</string>
    <string name="contact_us_email">メールアドレス</string>
    <string name="contact_us_content">お問い合わせ内容</string>
    <string name="contact_us_text_button">同意の上、送信する</string>
    <string name="contact_title_dialog">お問い合わせ完了</string>
    <string name="contact_content_dialog">お問合せありがとうございます。\nまもなくご確認のメールが届きます。\n万が一、届かない場合はparty@p-a.jpを受信\n可能な設定にして頂きますようお願い申し上げます。</string>
    <string name="contact_button_dialog">トップ画面へ</string>
    <string name="register_title">無料会員登録</string>
    <string name="register_text_button">次へ</string>
    <string name="register">無料会員登録はこちら</string>
    <string name="register_notification">携帯電話のメールアドレスは、お知らせ等が届かないケースが頻発しております。登録はPCメールアドレスを推奨いたします</string>
    <string name="register_email">メールアドレス</string>
    <string name="register_password">パスワード(半角・英数字8桁以上)</string>
    <string name="register_password_confirm">パスワード(確認)</string>
    <string name="password_not_match"> パスワードが一致しません。</string>
    <string name="register_pass_confirm_empty"> パスワードを入力してください。</string>
    <string name="notification_pass">※英字、数字、記号など組み合わせると、セキュリティが強化されます。</string>
    <string name="register_last_name">姓(本名)</string>
    <string name="register_first_name">名(本名)</string>
    <string name="register_say">セイ(フリガナ)</string>
    <string name="register_mei">メイ(フリガナ)</string>
    <string name="register_gender">性別</string>
    <string name="register_birthday_year">年</string>
    <string name="register_birthday_month">月</string>
    <string name="register_birthday_day">日</string>
    <string name="register_tel">携帯電話番号</string>
    <string name="notification_tel">※必ず携帯電話の番号を入力してください。</string>
    <string name="notification_birthday">※当日受付にて身分証明書で年齢確認を行います。</string>
    <string name="notification_end">※予約数は正しく設定してください。\n※友人が【異性】の場合は必ずお電話にてお申込みください。</string>
    <string name="register_address">都道府県</string>
    <string name="register_about_infomation"><u>弊社における個人情報と取扱について</u></string>
    <string name="register_text_confirm">上記、個人情報の取り扱いに関して同意する</string>
    <string name="kana_mei_empty">メイ（フリガナ）を入力してください。</string>
    <string name="year_empty">年を選択してください。</string>
    <string name="date_empty">生年月日を入力してください。</string>
    <string name="month_empty">月を選択してください。</string>
    <string name="day_empty">日を選択してください。</string>
    <string name="kana_sei_empty"> セイ（フリガナ）を入力してください。</string>
    <string name="sei_empty">性（本名）を入力してください。</string>
    <string name="mei_empty">名（本名）を入力してください。</string>
    <string name="tel_empty"> 携帯電話番号を入力してください。</string>
    <string name="address_emty">都道府県を選択してください。</string>
    <string name="check_confirm">Please agree to the terms</string>
    <string name="birth_day_emty">Birth day can not be blank</string>
    <string name="tel_incorrect">Tel is incorrect</string>
    <string name="notification_email">携帯電話のメールアドレスは、お知らせ等が届かないケースが頻発しております。登録はPCメールアドレスを推奨いたします</string>
    <string name="notification_2">party@p-a.jpを受信可能にしてください。\n携帯電話のアドレスはメールが届かない場合が多く見受けられますので、PCアドレスを推奨いたします。</string>
    <string name="title_recommend">お勧めする</string>
    <string name="title_book_party">Book Party</string>
    <string name="noti_1">無料会員登録はこちら</string>
    <string name="noti_2">新規登録する方はこちらから登録をお願いします。\n会員登録をすると…</string>
    <string name="noti_3">＊ 毎回の情報入力を省略することができて申込みが簡単に！</string>
    <string name="noti_4">ログイン状態でお申込みに進んで頂くと、会員登録時に登録したプロフィール情報が自動反映するため、【3秒程度】でパーティー申込みをすることができます！</string>
    <string name="noti_5">＊ 無料会員様だけの特別な機能が無料で使いたい放題！</string>
    <string name="noti_6">・検討中リスト機能</string>
    <string name="noti_7">「一度、検討中リストにパーティーを登録すると、後日同じパーティーをすぐに確認できるようになります」</string>
    <string name="noti_plus1">・お客様だけにオススメパーティーの告知（サイト内）</string>
    <string name="noti_plus2">「お客様のお住まいや年齢など、様々な条件に合わせて、直近開催のパーティーから優先的にサイト内でご案内いたします」</string>
    <string name="noti_plus3">※確認のため、もう一度入力してください。</string>
    <string name="noti_8">・申込み履歴情報</string>
    <string name="noti_9">「現在、どのパーティーに申し込んでいるか、過去どのようなパーティーに参加したかなど、簡単に確認できます」</string>
    <string name="noti_10">＊ 特別企画などの最新パーティー情報が届きます！</string>
    <string name="noti_11">会員登録して頂くと当社の最新のおすすめパーティー情報をメルマガにてお届けしますので情報を逃すことがありません。</string>
    <string name="noti_12">＊ 会員登録をしなくともパーティー申込みは可能です！</string>
    <string name="noti_13">まずは一度パーティーに参加してみたいというお客様は会員登録をしなくてもパーティー申込みは可能です。</string>
    <string name="match_making">お見合い</string>
    <string name="half_room">半個室</string>
    <string name="small_scale">小規模</string>
    <string name="massive">大規模</string>
    <string name="medium_scale">中規模</string>
    <string name="seminar">セミナー</string>
    <string name="special_event">特別企画</string>
    <string name="talk_with_everyone">全員と話せる</string>
    <string name="dialog_register_party_successful_thank_you">パーティーにお申込みいただき、\n誠にありがとうございます。</string>
    <string name="dialog_register_party_successful_complete_email">ご登録いただいたアドレスに\n【申込完了メール（自動配信）】\nを送信いたしました。</string>
    <string name="dialog_register_party_successful_description">【申込完了メール（自動配信）】は、\n参加を確定する案内ではなく、\n申込完了を通知するメールです。</string>
    <string name="dialog_register_party_successful_back_to_top">トップへ戻る</string>
    <string name="rematch_content_header">選んだ人だけが運命の人ではない。\n選んでくれた人が運命の人かもしれない。</string>
    <string name="rematch_content_1">パーティーが終わってからも、トークが出来ます。\nあなたの運命の人にアプローチしてみませんか？</string>
    <string name="rematch_content_2">Re Matchは、参加したパーティーのお相手全員\nにアプローチできるのが特徴です！</string>
    <string name="rematch_flow"><u>Re Matchご利用の流れ</u></string>
    <string name="rematch_friend_party">あなたが参加したパーティー</string>
    <string name="rematch_no_party">Re Matchは、あなたが参加した\nパーティー参加者にアプローチできる、\n素敵なコンテンツです！\nぜひ一度パーティーにご参加くださいね！</string>
</resources>