<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/noti_1"
        style="@style/text_noti_bold"
        android:layout_height="29dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="0dp"
        android:background="@color/color_EBEBEB"
        android:gravity="center"
        android:text="@string/noti_1"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/noti_2"
        style="@style/text_noti_bold"
        android:layout_marginTop="20dp"
        android:lineSpacingExtra="21dp"
        android:text="@string/noti_2"
        app:layout_constraintTop_toBottomOf="@id/noti_1" />

    <TextView
        android:id="@+id/noti_3"
        style="@style/text_noti_bold"
        android:layout_marginTop="20dp"
        android:lineSpacingExtra="8dp"
        android:text="@string/noti_3"
        android:textColor="@color/color_E04F49"
        app:layout_constraintTop_toBottomOf="@+id/noti_2" />

    <TextView
        android:id="@+id/noti_4"
        style="@style/text_noti_normal"
        android:layout_marginTop="10dp"
        android:lineSpacingExtra="8dp"
        android:text="@string/noti_4"
        app:layout_constraintTop_toBottomOf="@+id/noti_3" />

    <TextView
        android:id="@+id/noti_5"
        style="@style/text_noti_bold"
        android:layout_marginTop="20dp"
        android:text="@string/noti_5"
        android:textColor="@color/color_E04F49"
        app:layout_constraintTop_toBottomOf="@+id/noti_4" />

    <TextView
        android:id="@+id/noti_6"
        style="@style/text_noti_bold"
        android:layout_marginTop="7dp"
        android:text="@string/noti_6"
        app:layout_constraintTop_toBottomOf="@+id/noti_5" />

    <TextView
        android:id="@+id/noti_7"
        style="@style/text_noti_normal"
        android:layout_marginTop="8dp"
        android:lineSpacingExtra="7dp"
        android:text="@string/noti_7"
        app:layout_constraintTop_toBottomOf="@+id/noti_6" />

    <TextView
        android:id="@+id/noti_plus1"
        style="@style/text_noti_bold"
        android:layout_marginTop="20dp"
        android:lineSpacingExtra="8dp"
        android:text="@string/noti_plus1"
        app:layout_constraintTop_toBottomOf="@+id/noti_7" />

    <TextView
        android:id="@+id/noti_plus2"
        style="@style/text_noti_normal"
        android:layout_marginTop="10dp"
        android:lineSpacingExtra="7dp"
        android:text="@string/noti_plus2"
        app:layout_constraintTop_toBottomOf="@+id/noti_plus1" />

    <TextView
        android:id="@+id/noti_8"
        style="@style/text_noti_bold"
        android:layout_marginTop="28dp"
        android:lineSpacingExtra="8dp"
        android:text="@string/noti_8"
        app:layout_constraintTop_toBottomOf="@+id/noti_plus2" />

    <TextView
        android:id="@+id/noti_9"
        style="@style/text_noti_normal"
        android:layout_marginTop="10dp"
        android:lineSpacingExtra="8dp"
        android:text="@string/noti_9"
        app:layout_constraintTop_toBottomOf="@+id/noti_8" />

    <TextView
        android:id="@+id/noti_10"
        style="@style/text_noti_bold"
        android:layout_marginTop="20dp"
        android:text="@string/noti_10"
        android:textColor="@color/color_E04F49"
        app:layout_constraintTop_toBottomOf="@+id/noti_9" />

    <TextView
        android:id="@+id/noti_11"
        style="@style/text_noti_normal"
        android:layout_marginTop="8dp"
        android:lineSpacingExtra="8dp"
        android:text="@string/noti_11"
        app:layout_constraintTop_toBottomOf="@+id/noti_10" />

    <TextView
        android:id="@+id/noti_12"
        style="@style/text_noti_bold"
        android:layout_marginTop="28dp"
        android:lineSpacingExtra="8dp"
        android:text="@string/noti_12"
        android:textColor="@color/color_E04F49"
        app:layout_constraintTop_toBottomOf="@+id/noti_11" />

    <TextView
        android:id="@+id/noti_13"
        style="@style/text_noti_normal"
        android:layout_marginTop="8dp"
        android:lineSpacingExtra="8dp"
        android:text="@string/noti_13"
        app:layout_constraintTop_toBottomOf="@+id/noti_12" />

</android.support.constraint.ConstraintLayout>