<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data class="HeaderMatchingBinding">

        <import type="android.view.View" />

        <variable
            name="header"
            type="org.atmarkcafe.otocon.function.rematch.HeaderMatchingItem" />
    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/content_header"
            style="@style/text_bold"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:background="#EF6590"
            android:gravity="center"
            android:lineSpacingExtra="15dp"
            android:text="@string/rematch_content_header"
            android:textColor="@color/colorWhite"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:background="#fef5f5"
            android:id="@+id/contrain_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/content_header">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:background="@color/colorBlack"
                android:scaleType="centerInside"
                android:src="@drawable/image_pairing"
                app:layout_constraintDimensionRatio="690:383.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/content1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:gravity="center"
                android:lineSpacingExtra="10dp"
                android:text="@string/rematch_content_1"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/avatar" />

            <TextView
                app:layout_constraintBottom_toBottomOf="parent"
                android:paddingBottom="24dp"
                android:id="@+id/content2"
                style="@style/text_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:gravity="center"
                android:lineSpacingExtra="10dp"
                android:text="@string/rematch_content_2"
                android:textColor="#EF6590"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/content1" />
        </android.support.constraint.ConstraintLayout>


        <TextView
            android:id="@+id/rematch_flow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:gravity="center"
            android:lineSpacingExtra="10dp"
            android:onClick="@{() -> header.listener.onClickGuide()}"
            android:text="@string/rematch_flow"
            android:textColor="#EF6590"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/contrain_layout" />

        <TextView
            android:id="@+id/partner_party"
            style="@style/text_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:lineSpacingExtra="10dp"
            android:text="@string/rematch_friend_party"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:visibility="@{header.show?View.GONE:View.VISIBLE}"
            app:layout_constraintTop_toBottomOf="@id/rematch_flow" />

        <TextView
            android:id="@+id/tv_noData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:gravity="center"
            android:lineSpacingExtra="9dp"
            android:paddingBottom="42dp"
            android:text="@string/rematch_no_party"
            android:textColor="#666666"
            android:textSize="14sp"
            android:visibility="@{header.show?View.VISIBLE:View.GONE}"
            app:layout_constraintTop_toBottomOf="@id/rematch_flow" />
    </android.support.constraint.ConstraintLayout>
</layout>